--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -63,7 +63,7 @@
             <br>
             <span>t: <a href="tel:9339564578">9339564578</a></span>
             <br>
-            <a href="" target="_blank" class="text-uppercase brand-teal">View Map</a>
+            <a href="https://goo.gl/maps/xRzPPWJGAMB2" target="_blank" class="text-uppercase brand-teal">View Map</a>
           </div>
         </div>
 
