--- a/views/footer.html
+++ b/views/footer.html
@@ -5,8 +5,8 @@
                 <div class="menu text-uppercase letter-space">
                     <ul>
                         <li><a href="" title="Home">home</a></li>
-                        <li><a href="" title="Cool Sclupting">Cool Sclupting</a></li>
-                        <li><a href="" title="Nutrigenomics">Nutrigenomics</a></li>
+                        <li><a href="#/coolsculpting" title="Cool Sclupting">Cool Sclupting</a></li>
+                        <li><a href="#/nutrigenomics" title="Nutrigenomics">Nutrigenomics</a></li>
                         <li><a href="#/imageconsulting" title="Image Consulting">Image Consulting</a></li>
                         <li><a href="#successstories" title="Success Stories">Success Stories</a></li>
                         <li><a href="#/news" title="News">News</a></li>
@@ -83,7 +83,7 @@
                             <li><a href="https://twitter.com/selfcarebysuman" traget="_blank"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://www.instagram.com/selfcarebysuman" traget="_blank"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://www.youtube.com/channel/UCVqKgmC6eaMrgPyXoOcOz2A" traget="_blank"><i class="fa fa-youtube"></i></a></li>
-                            <li><a href="https://www.pinterest.com/" traget="_blank"><i class="fa fa-pinterest-p"></i></a></li>
+                            <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
                         </ul>
                     </div>
                     <div class="copyright brand-brown-dark letter-space">
