--- a/views/content/meet.html
+++ b/views/content/meet.html
@@ -14,7 +14,13 @@
 <div class="brand-brown-bg speech">
   <div class="container">
     <div class="suman-video">
-<iframe width="100%" height ="100%" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe>
+      <!-- <iframe width="100%" height ="100%" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe> -->
+      <a class="various fancybox.iframe" fancybox href="https://www.youtube.com/embed/nSQJuONAvaw?autoplay=1">
+        <img src="http://img.youtube.com/vi/nSQJuONAvaw/sddefault.jpg" alt="" class="img-responsive" />
+        <div class="circle">
+          <img src="img/play.png" alt="" class="img-responsive" />
+        </div>
+      </a>
     </div>
 </div>
 </div>
