--- a/views/footer.html
+++ b/views/footer.html
@@ -79,10 +79,10 @@
                     </div>
                     <div class="social-links social-links2 foot-sociallinks brand-primary-light">
                         <ul>
-                            <li><a href="https://www.facebook.com/selfcarebysuman" traget="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://twitter.com/selfcarebysuman" traget="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.instagram.com/selfcarebysuman" traget="_blank"><i class="fa fa-instagram"></i></a></li>
-                            <li><a href="https://www.youtube.com/channel/UCVqKgmC6eaMrgPyXoOcOz2A" traget="_blank"><i class="fa fa-youtube"></i></a></li>
+                            <li><a href="https://www.facebook.com/selfcarebysuman" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/selfcarebysuman" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.instagram.com/selfcarebysuman" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.youtube.com/channel/UCVqKgmC6eaMrgPyXoOcOz2A" target="_blank"><i class="fa fa-youtube"></i></a></li>
                             <li><a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest-p"></i></a></li>
                         </ul>
                     </div>
