--- a/views/content/coolsculpting.html
+++ b/views/content/coolsculpting.html
@@ -5,7 +5,90 @@
   </div>
 
   <div class="sculpting-main">
-    <img src="img/sculpting/coolsculpting.jpg" class="img-responsive" alt="">
+    <div class="sculp-one">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="cool">
+              <h2 class="text-uppercasse brand-primary">what is cool sculpting</h2>
+              <p>The CoolSculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure to use controlled cooling to safely target and eliminate diet- and exercise-resistant fat. CoolSculpting results are proven, noticeable, and lasting, so you'll look and feel great from every angle.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="sculp-two">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-offset-6 col-md-6">
+            <div class="fat">
+              <h2 class="text-uppercase brand-primary">freeze away fat</h2>
+              <p>It comes down to science. Fat cells freeze at higher temperatures than surrounding tissues.  CoolSculpting technology safely delivers precisely controlled cooling to gently and effectively target the fat cells underneath the skin. The treated fat cells are crystallized (frozen), and then die. Over time, your body naturally processes the fat and eliminates these dead cells, leaving a more sculpted you.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="sculp-three video">
+      <div class="container">
+        <div class="watch-video text-center">
+          <h2 class="text-uppercase">watch the video</h2>
+          <div class="play-me"><img src="" alt="" class="img-responsive"></div>
+        </div>
+      </div>
+    </div>
+    <div class="sculp-four">
+      <div class="container">
+        <div class="works">
+          <h2 class="text-uppercase brand-primary">how it works</h2>
+          <p>It’s easy to sit back, relax and say goodbye to stubborn fat. After we select the area(s) to be treated, the device is positioned on your body and controlled cooling is applied. During your procedure, you may choose to read, check email, or even take a nap. The CoolSculpting fat freezing procedure is completely non-surgical, so you can typically return to work and normal activities immediately. You will like what you see. In the weeks and months following your procedure, your body naturally processes the fat and eliminates these dead cells. Once the treated fat cells are gone, they're gone for good.</p>
+        </div>
+      </div>
+    </div>
+    <div class="sculp-five">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-offset-2 col-md-8">
+            <div class="improvement arrow-same">
+              <flex-slider class="carousel"></flex-slider>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="sculp six">
+      <div class="container">
+        <row>
+          <div class="col-md-offset-2 col-md-8">
+            <div class="applicators arrow-same">
+              <flex-slider class="carousel"></flex-slider>
+            </div>
+          </div>
+        </row>
+      </div>
+    </div>
+    <div class="sculp-seven">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-offset-6 col-md-6">
+            <div class="ready">
+              <h2 class="text-uppercase brand-primary">are you ready</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="sculp-eight">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-offset-2 col-md-8">
+            <div class="faq-sculp">
+              <flex-slider></flex-slider>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   </section>
