--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -51,7 +51,7 @@
                 })">
                   <img ng-src="{{product.image | serverimage}}" alt="" class="img-responsive round">
                 </div>
-                <p class="brand-primary font-semibold pointer" ui-sref="productdetail({
+                <p class="brand-primary font-semibold pointer name" ui-sref="productdetail({
                   id:product.id
                 })">
                   <span class="text-uppercase">{{product.name}}</span> |
