--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1549,10 +1549,13 @@ footer {
   }
   h3 {
     @include margin(40px 0 20px);
+    display: inline-block;
     font-size: 27px;
-    span {
-      margin-left: 20px;
-    }
+  }
+  .prd-price {
+    margin-left: 20px;
+    display: inline-block;
+      font-size: 27px;
   }
   .product-tab-detail {
     margin: 30px 0 0;
