--- a/views/content/nutrigenomics.html
+++ b/views/content/nutrigenomics.html
@@ -4,13 +4,13 @@
     <h2 class="text-uppercase get-center white font-semibold">Nutrigenomics</h2>
   </div>
 
-  <div class="nutri-one">
+  <div class="nutri-one back-img">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
           <div class="unlock">
             <h2 class="brand-primary text-uppercase font-semibold">Unlock your genetic potential</h2>
-            <p class="text-justify">By doing a simple once-only saliva or blood test, you can discover your DNA blueprint and learn how well your genes are matched to your present diet and lifestyle, as well as how you can unlock the full potential of your current and future
+            <p class="text-justify descp">By doing a simple once-only saliva or blood test, you can discover your DNA blueprint and learn how well your genes are matched to your present diet and lifestyle, as well as how you can unlock the full potential of your current and future
               health and wellness.</p>
           </div>
         </div>
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-  <div class="nutri-two">
+  <div class="nutri-two back-img">
     <div class="container">
       <div class="row">
         <div class="col-md-offset-6 col-md-6">
@@ -30,24 +30,24 @@
     </div>
   </div>
 
-  <div class="nutri-three">
+  <div class="nutri-three back-img">
     <div class="container">
       <div class="row">
         <div class="col-md-offset-6 col-md-6">
           <div class="what-nutri">
             <h2 class="brand-primary text-uppercase font-semibold">What is nutrigenomics?</h2>
-            <p class="text-justify">Synchronising our unique DNA blueprint with your diet and lifestyle, known as nutrigenomics, is the key to the exciting new realm of personalised wellness medicine.</p>
+            <p class="text-justify descp">Synchronising our unique DNA blueprint with your diet and lifestyle, known as nutrigenomics, is the key to the exciting new realm of personalised wellness medicine.</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="nutri-four">
+  <div class="nutri-four back-img">
     <div class="container">
       <div class="row">
         <div class="col-md-offset-2 col-md-8">
-          <div class="benefits text-center">
+          <div class="benefits text-center same-slider">
             <h2 class="brand-primary text-uppercase font-semibold">Benefits</h2>
             <flex-slider class="carousel" flex-slide="nutri in nutrigenomics track by $index" animation="slide">
               <li>
@@ -63,7 +63,7 @@
     </div>
   </div>
 
-  <div class="nutri-five">
+  <div class="nutri-five back-img">
     <div class="container">
       <div class="row">
         <div class="col-md-offset-6 col-md-6">
@@ -75,7 +75,7 @@
     </div>
   </div>
 
-  <div class="nutri-six">
+  <div class="nutri-six back-img">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
