--- a/views/content/coolsculpting.html
+++ b/views/content/coolsculpting.html
@@ -5,85 +5,136 @@
   </div>
 
   <div class="sculpting-main">
-    <div class="sculp-one">
+    <div class="sculp-one back-img">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
             <div class="cool">
-              <h2 class="text-uppercasse brand-primary">what is cool sculpting</h2>
-              <p>The CoolSculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure to use controlled cooling to safely target and eliminate diet- and exercise-resistant fat. CoolSculpting results are proven, noticeable, and lasting, so you'll look and feel great from every angle.</p>
+              <h2 class="text-uppercase brand-primary">what is cool sculpting</h2>
+              <p class="text-justify descp">The CoolSculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure to use controlled cooling to safely target and eliminate diet- and exercise-resistant
+                fat. CoolSculpting results are proven, noticeable, and lasting, so you'll look and feel great from every angle.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="sculp-two">
+    <div class="sculp-two back-img">
       <div class="container">
         <div class="row">
           <div class="col-md-offset-6 col-md-6">
             <div class="fat">
               <h2 class="text-uppercase brand-primary">freeze away fat</h2>
-              <p>It comes down to science. Fat cells freeze at higher temperatures than surrounding tissues.  CoolSculpting technology safely delivers precisely controlled cooling to gently and effectively target the fat cells underneath the skin. The treated fat cells are crystallized (frozen), and then die. Over time, your body naturally processes the fat and eliminates these dead cells, leaving a more sculpted you.</p>
+              <p class="text-justify descp">It comes down to science. Fat cells freeze at higher temperatures than surrounding tissues. CoolSculpting technology safely delivers precisely controlled cooling to gently and effectively target the fat cells underneath the skin. The treated
+                fat cells are crystallized (frozen), and then die. Over time, your body naturally processes the fat and eliminates these dead cells, leaving a more sculpted you.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="sculp-three video">
+    <div class="sculp-three video back-img">
       <div class="container">
         <div class="watch-video text-center">
-          <h2 class="text-uppercase">watch the video</h2>
+          <h2 class="text-uppercase brand-primary">watch the video</h2>
           <div class="play-me"><img src="" alt="" class="img-responsive"></div>
         </div>
       </div>
     </div>
-    <div class="sculp-four">
-      <div class="container">
-        <div class="works">
-          <h2 class="text-uppercase brand-primary">how it works</h2>
-          <p>It’s easy to sit back, relax and say goodbye to stubborn fat. After we select the area(s) to be treated, the device is positioned on your body and controlled cooling is applied. During your procedure, you may choose to read, check email, or even take a nap. The CoolSculpting fat freezing procedure is completely non-surgical, so you can typically return to work and normal activities immediately. You will like what you see. In the weeks and months following your procedure, your body naturally processes the fat and eliminates these dead cells. Once the treated fat cells are gone, they're gone for good.</p>
-        </div>
-      </div>
-    </div>
-    <div class="sculp-five">
+    <div class="sculp-four back-img">
       <div class="container">
         <div class="row">
-          <div class="col-md-offset-2 col-md-8">
-            <div class="improvement arrow-same">
-              <flex-slider class="carousel"></flex-slider>
+          <div class="col-md-8">
+            <div class="works">
+              <h2 class="text-uppercase brand-primary">how it works</h2>
+              <p class="text-justify descp">It’s easy to sit back, relax and say goodbye to stubborn fat. After we select the area(s) to be treated, the device is positioned on your body and controlled cooling is applied. During your procedure, you may choose to read, check email,
+                or even take a nap. The CoolSculpting fat freezing procedure is completely non-surgical, so you can typically return to work and normal activities immediately. You will like what you see. In the weeks and months following your procedure,
+                your body naturally processes the fat and eliminates these dead cells. Once the treated fat cells are gone, they're gone for good.</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="sculp six">
+    <div class="sculp-five back-img">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-offset-2 col-md-8">
+            <div class="improvement same-slider text-center">
+              <h2 class="text-uppercase brand-primary">before and after</h2>
+              <flex-slider class="carousel" flex-slide="sculpimprove in imporvementsculp">
+                <li>
+                  <div class="improve">
+                    <div class="improve-imghold">
+                      <img ng-src="{{sculpimprove.img}}" alt="" class="img-responsive">
+                    </div>
+                    <h5 class="text-uppercase">{{sculpimprove.state}}</h5>
+                    <p class="">{{sculpimprove.session}}</p>
+                    <p class="">{{sculpimprove.courtesy}}</p>
+                  </div>
+                </li>
+              </flex-slider>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="sculp-six back-img">
       <div class="container">
         <row>
           <div class="col-md-offset-2 col-md-8">
-            <div class="applicators arrow-same">
-              <flex-slider class="carousel"></flex-slider>
+            <div class="applicators same-slider text-center">
+              <h2 class="text-uppercase brand-primary">applicators</h2>
+              <flex-slider class="carousel" flex-slide="slide in applicators track by $index" animation="slide">
+                <li>
+                  <div class="app-slide">
+                    <div class="media">
+                      <div class="media-left">
+                        <div class="app-img-holder"><img ng-src="{{slide.img}}" alt="" class="media-object"></div>
+                      </div>
+                      <div class="media-body">
+                        <h4 class="media-heading">{{slide.heading}}</h4>
+                        <p class="text-justify">{{slide.descp}}</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+              </flex-slider>
+              <p>These programs are only available at clinics in Mumbai and not online</p>
             </div>
           </div>
         </row>
       </div>
     </div>
-    <div class="sculp-seven">
+    <div class="sculp-seven back-img">
       <div class="container">
         <div class="row">
           <div class="col-md-offset-6 col-md-6">
             <div class="ready">
               <h2 class="text-uppercase brand-primary">are you ready</h2>
+              <div class="descp">
+                <p class="text-justify">Are you ready to love every view of you? The sooner you set up your consultation, the sooner you'll see results in the mirror — long-term results in those areas that have resisted all efforts through diet and exercise.
+                </p>
+                <p class="text-justify">Contact us on <span class="brand-primary"><a href="tel:02261312222" class="brand-primary">022-61312222</a> / <a href="tel:+919323217232" class="brand-primary">+91 - 9323217232</a></span> to find out if the CoolSculpting fat freezing procedure
+                  is right for you.</p>
+                <p>Results and patient experience may vary.</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="sculp-eight">
+    <div class="sculp-eight back-img">
       <div class="container">
         <div class="row">
           <div class="col-md-offset-2 col-md-8">
-            <div class="faq-sculp">
-              <flex-slider></flex-slider>
+            <div class="faq-sculp same-slider text-center">
+              <h2 class="brand-primary text-uppercase font-semibold">frequently asked question</h2>
+              <flex-slider class="carousel" flex-slide="faq in faqsculp track by $index" animation="slide">
+                <li>
+                  <div class="faqslide">
+                    <h4>{{faq.qts}}</h4>
+                    <p>{{faq.descp}}</p>
+                  </div>
+                </li>
+              </flex-slider>
             </div>
           </div>
         </div>
@@ -91,4 +142,4 @@
     </div>
   </div>
 
-  </section>
+</section>
