fixes,fixes everywhere

--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -28,7 +28,7 @@
           <tbody>
             <tr class="text-center letter-space font-semibold" ng-repeat="product in allcart">
               <td>
-                <figure>
+                <figure  class="pointer" ui-sref="productdetail({id:product.id})">
                   <div class="cart-imgholder m-center">
                   <img ng-src="{{product.image | serverimage}}" class="img-responsive round">
                   </div>
@@ -36,9 +36,10 @@
                 </figure>
               </td>
               <td>
-                <input type="number" class="text-center quantity" name="" min="0" id="" value="{{product.qty}}" disabled>
+                <input type="number" class="text-center quantity" name="" ng-change="updateQuantity(product)" min="0" id="" ng-model="product.qty" >
                 <a href="" class="more inline-block brand-primary-bg white" ng-click="addQuantity(product)"><i class="fa fa-plus"></i></a>
                 <a href="" class="less inline-block brand-primary-bg white" ng-click="subtractQuantity(product)"><i class="fa fa-minus"></i></a>
+                <div class="text-center" ng-show="product.exceeds">Quantity unavailable.</div>
               </td>
               <td>
                 <div class="cart-amount">
@@ -71,7 +72,7 @@
             <div class="col-md-6">
               <div class="text-right cart-btn">
                 <a href="#/healthproducts/1" class="btn btn-primary text-uppercase continue">Continue Shopping</a>
-                <a href="#/checkout" class="btn btn-primary text-uppercase" ng-if="allcart.length > 0">Proceed to checkout</a>
+                <a class="btn btn-primary text-uppercase" ng-if="allcart.length > 0" ng-click="proceedToCheckout()">Proceed to checkout</a>
               </div>
             </div>
           </div>
